--- a/src/group_19_ucsb_grad.Rmd
+++ b/src/group_19_ucsb_grad.Rmd
@@ -15,4 +15,10 @@ library(here)
 ```{r}
 ucsb_grad <- read_csv(here("data","ucsb_grad_data.csv"))
 ```
+```{r}
+ggplot(data = ucsb_grad, aes(x = year_abbr, y = domestic_enrollment)) + #set x and y axis
+  geom_col( #choose geom_col graph type
+    aes(fill = ethnicity) #fill color dependent on race/ethnicity
+    ) 
+```
 
